@@ -1,3 +1,9 @@
+2008-09-13  delx
+
+    * Check if locale exists before setting LANG environment variables
+    * ISO8859-* and eucXX encodings will get correct environment variables
+    
+
 2008-09-11  fabian
 
     * Fixed a bug that might crashes iTerm when there's a background image.
